gitignore added and README.md updated.